Fixed too-big fonts on mobile.

--- a/assets/stylesheets/_hero.sass
+++ b/assets/stylesheets/_hero.sass
@@ -14,7 +14,6 @@
   
 .hero
   .title
-    font-weight: normal
     
   &.is-gears
     background: url('/images/hero/gears.jpg')
